--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- <script src="zyupload/zyupload-1.0.0.min.js"></script> -->
-    <link rel="stylesheet" href="zyupload/zyupload-1.0.0.min.css" />
+    <!-- <link rel="stylesheet" href="zyupload/zyupload-1.0.0.min.css" /> -->
   </head>
   <body>
     <div id="app"></div>
