--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.title %>11</title>
     <!-- <script src="zyupload/zyupload-1.0.0.min.js"></script> -->
     <!-- <link rel="stylesheet" href="zyupload/zyupload-1.0.0.min.css" /> -->
   </head>
